# AIODesa

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  README.md  aiodesa.html  aiodesa.utils.html  genindex.html  index.html  modules.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  tox.ini
.changes/: 0.1.11.md  0.2.0.md
.github/: coverage.json  doc-version.sh  flake8-report.sh  mypy-report.sh  pylint-report.sh  pytest-report.sh  readme-update.sh  versioning.sh
.github/mypy/: index.txt
.github/workflows/: ci_build.yml  sphinx.yml
_modules/: index.html
_modules/aiodesa/: database.html
_modules/aiodesa/utils/: table.html  util_types.html
_sources/: aiodesa.rst.txt  aiodesa.utils.rst.txt  index.rst.txt  modules.rst.txt  quickstart.rst.txt
aiodesa/: Database.py  __init__.py  database.py
aiodesa/utils/: schema.py  table.py  types.py  util_types.py
aiodesa/utils/records/: __init__.py  records.py
aiodesa/utils/tables/: table.py
aiodesa/utils/types/: types.py
docs/: aiodesa.rst  aiodesa.utils.rst  aiodesa.utils.tables.rst  aiodesa.utils.types.rst  conf.py  index.rst  modules.rst
examples/: aiohttp_server.py  desa.py
tests/: test_Database.py  test_schema.py  test_table.py  test_types.py
