[tool.poetry]
name = "aiodesa"
version = "0.1.4"
description = ""
authors = ["sockheadrps <r.p.skiles@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiosqlite = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pre-commit = "^3.5.0"
mypy = "^1.7.1"
pytest-asyncio = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
